welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:35: error: unclosed comment
/*estSurMessage():Boolean: renvoie true si et seulement s'il y a un message écrit par terre.
^BDRBuggle:2: error: Missing closing brace `}' assumed here
while (estSurMessage():Boolean:) {
^